# pizzly

./: .env.template  .pre-commit-config.yaml  CITATION.cff  README.md  app.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: python-publish.yml  test.yml
assets/: thumbnail.pxd
make/: dev.mk  variables.mk
src/pizzly/: __init__.py  __version__.py
src/pizzly/core/: __init__.py  indicator.py  processor.py
src/pizzly/data/: __init__.py  alpaca.py  edgar.py  finnhub.py
src/pizzly/indicators/: bollinger.py  rsi.py
src/pizzly/models/: __init__.py  tools.py
src/pizzly/tools/: financial_tool.py
tests/: __init__.py  test_init.py
