[project]
name = "agentic-market-tool"
version = "0.1.0"
description = "Agentic market analysis based on Polars and Transformers"
authors = [{name = "Louis Brulé Naudet", email = "contact@louisbrulenaudet.com"}]
readme = "README.md"
license = {text = "Apache License (2.0)"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache License (2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["market analysis", "transformers", "polars", "finance", "AI"]

requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.3.0",
    "alpaca-py>=0.38.0",
    "polars>=1.22.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "smolagents>=1.8.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pre-commit-uv>=4.1.4",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--maxfail=1 --disable-warnings -q"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-annotations
    "ANN",
    # flake8-print
    "T20",
]
ignore = [
    "B008",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"**/{tests,docs}/*" = [
    "ANN",
]

[tool.logfire]
pydantic_plugin_record = "all"

[tool.ruff]
fix = true

[tool.pyright]
exclude = [
    "**/tests"
]

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[project.urls]
Homepage = "https://github.com/louisbrulenaudet/agentic-market-tool"
Repository = "https://github.com/louisbrulenaudet/agentic-market-tool"
